split hue integration as aplugin out of visualizer